[package]
name = "hockeyscraper"
version = "0.1.0"
authors = ["cx <simon.farre.cx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
# tokio = { version = "0.2", features = ["full"] }
scraper = "*"
select = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
pbr = "*"